test/src/e2e_vm_tests/test_programs/should_pass/stdlib/chess/src/main.sw
script;

dep huge_enum;

fn main() {
    
}
