test/src/e2e_vm_tests/test_programs/should_fail/free_fn_self/src/main.sw
script;

fn free_fn(self) {}
fn main() {}
